Firebase Configuration copied for existing project

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,6 @@ yarn-debug.log*
 yarn-error.log*
 
 package-lock.json
-/.firebase
-.firebaserc
-firebase.json
+#/.firebase
+#.firebaserc
+#firebase.json
